--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 spring.application.name=Medicare
-spring.datasource.url=jdbc:mysql://localhost:3306/medical_care_db
+spring.datasource.url=jdbc:mysql://localhost:3306/medicare_db
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=Medicare@2025
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.thymeleaf.cache=false
+
