--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -26,6 +26,16 @@ jobs:
           --health-retries=3
 
     steps:
+    - name: Wait for MySQL to be ready
+      run: |
+        for i in {30..0}; do
+          if mysqladmin ping -h 127.0.0.1 --user=root --password=Medicare@2025 --silent; then
+            echo "MySQL is ready"
+            break
+          fi
+          echo 'Waiting for MySQL...'
+          sleep 2
+        done
     - uses: actions/checkout@v4
     - name: Set up JDK 11
       uses: actions/setup-java@v4
