--- a/.github/workflows/master_medicare.yml
+++ b/.github/workflows/master_medicare.yml
@@ -30,7 +30,7 @@ jobs:
       uses: docker/build-push-action@v3
       with:
         push: true
-        tags: index.docker.io/${{ secrets.AzureAppService_ContainerUsername_8fdf4fed6480472e9ccdd10bb622db7a }}/Dockerfile:${{ github.sha }}
+        tags: index.docker.io/${{ secrets.AzureAppService_ContainerUsername_8fdf4fed6480472e9ccdd10bb622db7a }}/dockerfile:${{ github.sha }}
         file: ./Dockerfile
 
   deploy:
