--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,10 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.thymeleaf.cache=false
 
+# # JWT Configuration
+app.jwtSecret=yourSecretKeyHereMakeItLongAndSecureForProductionUse
+app.jwtExpirationMs=86400000
+
+# OpenAPI/Swagger Configuration
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
