--- a/pom.xml
+++ b/pom.xml
@@ -140,6 +140,12 @@
             <version>2.8.6</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-ui</artifactId>
+            <version>1.7.0</version>
+        </dependency>
+
     </dependencies>
 
 
