--- a/package.json
+++ b/package.json
@@ -12,23 +12,26 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
-    "@fontsource/montserrat-alternates": "^5.2.5",
+    "@material-tailwind/react": "^2.1.10",
     "@tailwindcss/vite": "^4.1.3",
     "gh-pages": "^6.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "swiper": "^11.2.6"
+    "swiper": "^10.3.1",
+    "tailwindcss": "^4.1.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
-    "tailwindcss": "^4.1.3",
+    "postcss": "^8.5.3",
+    "postcss-preset-env": "^10.1.6",
     "vite": "^6.2.0"
   }
 }
