--- a/package.json
+++ b/package.json
@@ -12,11 +12,16 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
-    "@material-tailwind/react": "^2.1.10",
+    "@headlessui/react": "^2.2.2",
+    "@heroicons/react": "^1.0.6",
     "@tailwindcss/vite": "^4.1.3",
+    "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
+    "framer-motion": "^12.9.4",
     "gh-pages": "^6.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^7.5.3",
     "swiper": "^10.3.1",
     "tailwindcss": "^4.1.5"
   },
