--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,5 @@ spring.thymeleaf.cache=false
 app.jwtSecret=yourSecretKeyHereMakeItLongAndSecureForProductionUse
 app.jwtExpirationMs=86400000
 
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
