--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.5.3",
+    "react-scripts": "^5.0.1",
     "swiper": "^10.3.1",
     "tailwindcss": "^4.1.5"
   },
