--- a/package.json
+++ b/package.json
@@ -14,20 +14,34 @@
   "dependencies": {
     "@headlessui/react": "^2.2.2",
     "@heroicons/react": "^1.0.6",
+    "@stomp/stompjs": "^7.1.1",
     "@tailwindcss/vite": "^4.1.3",
+    "browserify-zlib": "^0.2.0",
+    "buffer": "^6.0.3",
     "clsx": "^2.1.1",
+    "crypto-browserify": "^3.12.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.9.4",
     "gh-pages": "^6.3.0",
+    "global": "^4.4.0",
     "lucide-react": "^0.509.0",
+    "pdfjs-dist": "^4.8.69",
+    "process": "^0.11.10",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-pdf": "^9.2.1",
     "react-router-dom": "^7.5.3",
     "react-scripts": "^5.0.1",
+    "rollup-plugin-node-polyfills": "^0.2.1",
+    "sockjs-client": "^1.6.1",
+    "stream-browserify": "^3.0.0",
     "swiper": "^10.3.1",
-    "tailwindcss": "^4.1.5"
+    "tailwindcss": "^4.1.5",
+    "util": "^0.12.5"
   },
   "devDependencies": {
+    "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
+    "@esbuild-plugins/node-modules-polyfill": "^0.2.2",
     "@eslint/js": "^9.21.0",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
