--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-pdf": "^9.2.1",
+    "react-qr-code": "^2.0.15",
     "react-router-dom": "^7.5.3",
     "react-scripts": "^5.0.1",
     "rollup-plugin-node-polyfills": "^0.2.1",
