--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "process": "^0.11.10",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.6.0",
     "react-pdf": "^9.2.1",
     "react-qr-code": "^2.0.15",
     "react-router-dom": "^7.5.3",
