--- a/package.json
+++ b/package.json
@@ -16,6 +16,11 @@
     "@heroicons/react": "^1.0.6",
     "@stomp/stompjs": "^7.1.1",
     "@tailwindcss/vite": "^4.1.3",
+    "@tiptap/extension-color": "^3.14.0",
+    "@tiptap/extension-text-align": "^3.14.0",
+    "@tiptap/extension-text-style": "^3.14.0",
+    "@tiptap/react": "^3.14.0",
+    "@tiptap/starter-kit": "^3.14.0",
     "browserify-zlib": "^0.2.0",
     "buffer": "^6.0.3",
     "clsx": "^2.1.1",
@@ -25,15 +30,14 @@
     "gh-pages": "^6.3.0",
     "global": "^4.4.0",
     "lucide-react": "^0.509.0",
-    "pdfjs-dist": "^4.8.69",
     "process": "^0.11.10",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.6.0",
-    "react-pdf": "^9.2.1",
+    "react-pdf": "^10.2.0",
     "react-qr-code": "^2.0.15",
     "react-router-dom": "^7.5.3",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "^0.0.0",
     "rollup-plugin-node-polyfills": "^0.2.1",
     "sockjs-client": "^1.6.1",
     "stream-browserify": "^3.0.0",
