--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@stomp/stompjs": "^7.1.1",
     "@tailwindcss/vite": "^4.1.3",
     "@tiptap/extension-color": "^3.14.0",
+    "@tiptap/extension-placeholder": "^3.14.0",
     "@tiptap/extension-text-align": "^3.14.0",
     "@tiptap/extension-text-style": "^3.14.0",
     "@tiptap/react": "^3.14.0",
