--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "lucide-react": "^0.509.0",
     "process": "^0.11.10",
     "react": "^19.0.0",
+    "react-chat-elements": "^12.0.18",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.6.0",
     "react-pdf": "^10.2.0",
@@ -42,6 +43,7 @@
     "rollup-plugin-node-polyfills": "^0.2.1",
     "sockjs-client": "^1.6.1",
     "stream-browserify": "^3.0.0",
+    "styled-components": "^6.2.0",
     "swiper": "^10.3.1",
     "tailwindcss": "^4.1.5",
     "util": "^0.12.5"
