refactor: rename addMedicalHistory to addNewMedicalRecord and update implementation to handle multiple medical record types

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,5 @@ app.jwtExpirationMs=86400000
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 #spring.datasource.hikari.max-lifetime=300000
+profile.pictures.dir="C:\\Users\\Nouradawy\\Desktop\\Java_app\\vite-medicare\\src\\assets\\userProfilePictures"
+previsit.files.dir="C:\\Users\\Nouradawy\\Desktop\\Java_app\\vite-medicare\\src\\assets\\Documents\\"
