feat: update user signup process to include emergency contact and bio fields

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 spring.application.name=Medicare
-spring.datasource.url=jdbc:mysql://srv898.hstgr.io/u548890129_medicare_db
-spring.datasource.username=u548890129_admin
-spring.datasource.password=Medicare@@2025
+#spring.datasource.url=jdbc:mysql://srv898.hstgr.io/u548890129_medicare_db
+spring.datasource.url=jdbc:mysql://localhost:3306/medicare
+#spring.datasource.username=u548890129_admin
+spring.datasource.username=admin
+spring.datasource.password=b7102543
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
